errors stored in integrations, required fields fixed
