# api/v2/models/receiver.go
@@ -25,6 +25,7 @@ import (
 	"github.com/go-openapi/errors"
 	"github.com/go-openapi/strfmt"
 	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
 )
 
 // Receiver receiver
@@ -33,20 +34,31 @@ import (
 type Receiver struct {
 
 	// active
-	Active bool `json:"active,omitempty"`
+	// Required: true
+	Active *bool `json:"active"`
 
 	// integrations
+	// Required: true
 	Integrations []*Integration `json:"integrations"`
 
 	// name
-	Name string `json:"name,omitempty"`
+	// Required: true
+	Name *string `json:"name"`
 }
 
 // Validate validates this receiver
 func (m *Receiver) Validate(formats strfmt.Registry) error {
 	var res []error
 
+	if err := m.validateActive(formats); err != nil {
+		res = append(res, err)
+	}
+
 	if err := m.validateIntegrations(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateName(formats); err != nil {
 		res = append(res, err)
 	}
 
@@ -56,10 +68,19 @@ func (m *Receiver) Validate(formats strfmt.Registry) error {
 	return nil
 }
 
+func (m *Receiver) validateActive(formats strfmt.Registry) error {
+
+	if err := validate.Required("active", "body", m.Active); err != nil {
+		return err
+	}
+
+	return nil
+}
+
 func (m *Receiver) validateIntegrations(formats strfmt.Registry) error {
 
-	if swag.IsZero(m.Integrations) { // not required
-		return nil
+	if err := validate.Required("integrations", "body", m.Integrations); err != nil {
+		return err
 	}
 
 	for i := 0; i < len(m.Integrations); i++ {
@@ -76,6 +97,15 @@ func (m *Receiver) validateIntegrations(formats strfmt.Registry) error {
 			}
 		}
 
+	}
+
+	return nil
+}
+
+func (m *Receiver) validateName(formats strfmt.Registry) error {
+
+	if err := validate.Required("name", "body", m.Name); err != nil {
+		return err
 	}
 
 	return nil
