# api/v2/openapi.yaml
@@ -1,6 +1,5 @@
 ---
-
-swagger: '2.0'
+swagger: "2.0"
 
 info:
   version: 0.0.1
@@ -25,10 +24,10 @@ paths:
       operationId: getStatus
       description: Get current status of an Alertmanager instance and its cluster
       responses:
-        '200':
+        "200":
           description: Get status response
           schema:
-            $ref: '#/definitions/alertmanagerStatus'
+            $ref: "#/definitions/alertmanagerStatus"
   /receivers:
     get:
       tags:
@@ -36,12 +35,12 @@ paths:
       operationId: getReceivers
       description: Get list of all receivers (name of notification integrations)
       responses:
-        '200':
+        "200":
           description: Get receivers response
           schema:
             type: array
             items:
-              $ref: '#/definitions/receiver'
+              $ref: "#/definitions/receiver"
   /silences:
     get:
       tags:
@@ -49,12 +48,12 @@ paths:
       operationId: getSilences
       description: Get a list of silences
       responses:
-        '200':
+        "200":
           description: Get silences response
           schema:
-            $ref: '#/definitions/gettableSilences'
-        '500':
-          $ref: '#/responses/InternalServerError'
+            $ref: "#/definitions/gettableSilences"
+        "500":
+          $ref: "#/responses/InternalServerError"
       parameters:
         - name: filter
           in: query
@@ -75,18 +74,18 @@ paths:
           description: The silence to create
           required: true
           schema:
-            $ref: '#/definitions/postableSilence'
+            $ref: "#/definitions/postableSilence"
       responses:
-        '200':
+        "200":
           description: Create / update silence response
           schema:
             type: object
             properties:
               silenceID:
                 type: string
-        '400':
-          $ref: '#/responses/BadRequest'
-        '404':
+        "400":
+          $ref: "#/responses/BadRequest"
+        "404":
           description: A silence with the specified ID was not found
           schema:
             type: string
@@ -104,14 +103,14 @@ paths:
       operationId: getSilence
       description: Get a silence by its ID
       responses:
-        '200':
+        "200":
           description: Get silence response
           schema:
-            $ref: '#/definitions/gettableSilence'
-        '404':
+            $ref: "#/definitions/gettableSilence"
+        "404":
           description: A silence with the specified ID was not found
-        '500':
-          $ref: '#/responses/InternalServerError'
+        "500":
+          $ref: "#/responses/InternalServerError"
     delete:
       tags:
         - silence
@@ -125,10 +124,10 @@ paths:
           required: true
           description: ID of the silence to get
       responses:
-        '200':
+        "200":
           description: Delete silence response
-        '500':
-          $ref: '#/responses/InternalServerError'
+        "500":
+          $ref: "#/responses/InternalServerError"
   /alerts:
     get:
       tags:
@@ -170,14 +169,14 @@ paths:
           required: false
           type: string
       responses:
-        '200':
+        "200":
           description: Get alerts response
           schema:
-            '$ref': '#/definitions/gettableAlerts'
-        '400':
-          $ref: '#/responses/BadRequest'
-        '500':
-          $ref: '#/responses/InternalServerError'
+            "$ref": "#/definitions/gettableAlerts"
+        "400":
+          $ref: "#/responses/BadRequest"
+        "500":
+          $ref: "#/responses/InternalServerError"
     post:
       tags:
         - alert
@@ -189,14 +188,14 @@ paths:
           description: The alerts to create
           required: true
           schema:
-            $ref: '#/definitions/postableAlerts'
+            $ref: "#/definitions/postableAlerts"
       responses:
-        '200':
+        "200":
           description: Create alerts response
-        '500':
-          $ref: '#/responses/InternalServerError'
-        '400':
-          $ref: '#/responses/BadRequest'
+        "500":
+          $ref: "#/responses/InternalServerError"
+        "400":
+          $ref: "#/responses/BadRequest"
   /alerts/groups:
     get:
       tags:
@@ -233,14 +232,14 @@ paths:
           required: false
           type: string
       responses:
-        '200':
+        "200":
           description: Get alert groups response
           schema:
-            '$ref': '#/definitions/alertGroups'
-        '400':
-          $ref: '#/responses/BadRequest'
-        '500':
-          $ref: '#/responses/InternalServerError'
+            "$ref": "#/definitions/alertGroups"
+        "400":
+          $ref: "#/responses/BadRequest"
+        "500":
+          $ref: "#/responses/InternalServerError"
 
 responses:
   BadRequest:
@@ -252,17 +251,16 @@ responses:
     schema:
       type: string
 
-
 definitions:
   alertmanagerStatus:
     type: object
     properties:
       cluster:
-        $ref: '#/definitions/clusterStatus'
+        $ref: "#/definitions/clusterStatus"
       versionInfo:
-        $ref: '#/definitions/versionInfo'
+        $ref: "#/definitions/versionInfo"
       config:
-        $ref: '#/definitions/alertmanagerConfig'
+        $ref: "#/definitions/alertmanagerConfig"
       uptime:
         type: string
         format: date-time
@@ -282,7 +280,7 @@ definitions:
       peers:
         type: array
         items:
-          $ref: '#/definitions/peerStatus'
+          $ref: "#/definitions/peerStatus"
     required:
       - status
   alertmanagerConfig:
@@ -328,7 +326,7 @@ definitions:
     type: object
     properties:
       matchers:
-        $ref: '#/definitions/matchers'
+        $ref: "#/definitions/matchers"
       startsAt:
         type: string
         format: date-time
@@ -352,7 +350,7 @@ definitions:
           id:
             type: string
           status:
-            $ref: '#/definitions/silenceStatus'
+            $ref: "#/definitions/silenceStatus"
           updatedAt:
             type: string
             format: date-time
@@ -360,14 +358,14 @@ definitions:
           - id
           - status
           - updatedAt
-      - $ref: '#/definitions/silence'
+      - $ref: "#/definitions/silence"
   postableSilence:
     allOf:
       - type: object
         properties:
           id:
             type: string
-      - $ref: '#/definitions/silence'
+      - $ref: "#/definitions/silence"
   silenceStatus:
     type: object
     properties:
@@ -379,11 +377,11 @@ definitions:
   gettableSilences:
     type: array
     items:
-      $ref: '#/definitions/gettableSilence'
+      $ref: "#/definitions/gettableSilence"
   matchers:
     type: array
     items:
-      $ref: '#/definitions/matcher'
+      $ref: "#/definitions/matcher"
     minItems: 1
   matcher:
     type: object
@@ -405,7 +403,7 @@ definitions:
     type: object
     properties:
       labels:
-        $ref: '#/definitions/labelSet'
+        $ref: "#/definitions/labelSet"
       generatorURL:
         type: string
         format: uri
@@ -414,17 +412,17 @@ definitions:
   gettableAlerts:
     type: array
     items:
-      $ref: '#/definitions/gettableAlert'
+      $ref: "#/definitions/gettableAlert"
   gettableAlert:
     allOf:
       - type: object
         properties:
           annotations:
-            $ref: '#/definitions/labelSet'
+            $ref: "#/definitions/labelSet"
           receivers:
             type: array
             items:
-              $ref: '#/definitions/receiver'
+              $ref: "#/definitions/receiver"
           fingerprint:
             type: string
           startsAt:
@@ -437,7 +435,7 @@ definitions:
             type: string
             format: date-time
           status:
-            $ref: '#/definitions/alertStatus'
+            $ref: "#/definitions/alertStatus"
         required:
           - receivers
           - fingerprint
@@ -446,11 +444,11 @@ definitions:
           - endsAt
           - annotations
           - status
-      - $ref: '#/definitions/alert'
+      - $ref: "#/definitions/alert"
   postableAlerts:
     type: array
     items:
-      $ref: '#/definitions/postableAlert'
+      $ref: "#/definitions/postableAlert"
   postableAlert:
     allOf:
       - type: object
@@ -462,23 +460,23 @@ definitions:
             type: string
             format: date-time
           annotations:
-            $ref: '#/definitions/labelSet'
-      - $ref: '#/definitions/alert'
+            $ref: "#/definitions/labelSet"
+      - $ref: "#/definitions/alert"
   alertGroups:
     type: array
     items:
-      $ref: '#/definitions/alertGroup'
+      $ref: "#/definitions/alertGroup"
   alertGroup:
     type: object
     properties:
       labels:
-        $ref: '#/definitions/labelSet'
+        $ref: "#/definitions/labelSet"
       receiver:
-        $ref: '#/definitions/receiver'
+        $ref: "#/definitions/receiver"
       alerts:
         type: array
         items:
-          $ref: '#/definitions/gettableAlert'
+          $ref: "#/definitions/gettableAlert"
     required:
       - labels
       - receiver
@@ -488,7 +486,7 @@ definitions:
     properties:
       state:
         type: string
-        enum: ['unprocessed', 'active', 'suppressed']
+        enum: ["unprocessed", "active", "suppressed"]
       silencedBy:
         type: array
         items:
@@ -511,7 +509,11 @@ definitions:
       integrations:
         type: array
         items:
-          $ref: '#/definitions/integration'
+          $ref: "#/definitions/integration"
+    required:
+      - name
+      - active
+      - integrations
   integration:
     type: object
     properties:
@@ -527,11 +529,11 @@ definitions:
         type: string
     required:
       - name
+      - sendResolve
   labelSet:
     type: object
     additionalProperties:
       type: string
-
 
 tags:
   - name: general
